--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -38,6 +38,7 @@
 \newacronym{cog}{CoG}{Center Of Gravity}
 \newacronym{adc}{ADC}{Analog to Digital Converter}
 \newacronym{ai}{AI}{Artificial Intelligence}
+\newacronym{pla}{PLA}{Polylactic Acid}
 
 
 
